[package]
name = "bdk-playground"
version = "0.1.0"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wee_alloc = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
clap = "2.33"
structopt = "^0.3"
bdk-cli = { git = "https://github.com/afilini/bdk-cli.git", rev = "440bc90201c46f20b2f4f5d31d7c26762212c704", default-features = false, features = ["async-interface", "async-esplora", "compiler"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
